--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "dependencies": {
     "chalk": "^4.1.2"
   },
+  "scripts": {
+    "build": "pkg package.json",
+    "run": "node index.js"
+  },
   "bin": "index.js",
   "pkg": {
     "targets": ["node16-win-x64"]
