--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "pkg": {
     "targets": [
       "node16-win-x64"
+    ],
+    "assets": [
+      "osu!.*.cfg"
     ]
   },
   "devDependencies": {
